fix: :lipstick: fix dark mode in langToggler component

--- a/client/src/components/LangToggler/index.module.css
+++ b/client/src/components/LangToggler/index.module.css
@@ -7,8 +7,12 @@
     padding: .25rem;
 }
 
-.btn {
+.btn.light {
     color: var(--color-dark)
+}
+
+.btn.dark {
+    color: var(--color-light)
 }
 
 .btn:hover {
